--- a/muikku/src/main/webapp/resources/theme-muikku/sass/muikku-file-field-component.scss
+++ b/muikku/src/main/webapp/resources/theme-muikku/sass/muikku-file-field-component.scss
@@ -81,7 +81,8 @@
 
 .muikku-file-input-field-file-uploader-container input[type="file"] {
   width: 100%;
-  opacity: 0;
+  opacity: 0.001;
+  background: transparent;
   position: absolute;
   top: 0px;
   left: 0px;
