--- a/muikku/src/main/webapp/WEB-INF/templates/default.xhtml
+++ b/muikku/src/main/webapp/WEB-INF/templates/default.xhtml
@@ -86,7 +86,7 @@
       <!-- Dust -->
       <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/dustjs-linkedin/2.7.1/dust-full.min.js"/>
       <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/dustjs-helpers/1.7.1/dust-helpers.min.js"/>
-      <h:outputScript name="scripts/gui/dustloader.js" />
+      <script type="text/javascript" src="#{request.contextPath}/scripts/gui/dustloader.js"/>
       
       <!-- Async -->
       <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/async/0.9.0/async.js"/>
